# Fil-Rouge

./: Readme.md  pyproject.toml
notebooks/: Business Understanding.ipynb  Untitled-2.ipynb  models_trainning.ipynb
